// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data column header component renders correctly with filter but no sort 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <div>
      Test
    </div>
    Test
    <TextColumnFilter
      label="test"
      onChange={[MockFunction]}
    />
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <DragIndicatorIcon
      fontSize="small"
      style={
        Object {
          "cursor": "col-resize",
        }
      }
    />
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly with sort and filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <div>
      Test
    </div>
    <WithStyles(ForwardRef(TableSortLabel))
      active={false}
      onClick={[Function]}
    >
      Test
    </WithStyles(ForwardRef(TableSortLabel))>
    <TextColumnFilter
      label="test"
      onChange={[MockFunction]}
    />
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <DragIndicatorIcon
      fontSize="small"
      style={
        Object {
          "cursor": "col-resize",
        }
      }
    />
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly with sort but no filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <div>
      Test
    </div>
    <WithStyles(ForwardRef(TableSortLabel))
      active={false}
      onClick={[Function]}
    >
      Test
    </WithStyles(ForwardRef(TableSortLabel))>
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <DragIndicatorIcon
      fontSize="small"
      style={
        Object {
          "cursor": "col-resize",
        }
      }
    />
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly without sort or filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <div>
      Test
    </div>
    Test
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <DragIndicatorIcon
      fontSize="small"
      style={
        Object {
          "cursor": "col-resize",
        }
      }
    />
  </Draggable>
</div>
`;
